--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,25 @@ html {
   padding: 0;
   box-sizing: border-box;
 }  
+
+.nav-link {
+  position: relative;
+  color: black;
+  text-decoration: none;
+  font-size: 16px;
+}
+
+.nav-link::after {
+  content: '';
+  width: 0;
+  height: 2px;
+  background: #00A651;
+  position: absolute;
+  left: 0;
+  bottom: -6px;
+  transition: width 0.5s;
+}
+
+.nav-link:hover::after {
+  width: 100%;
+}
