--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,10 @@
 @import '../src/styles/app.scss';
 
-body,
+body{
+  background: #080808;
+  color: #fff ;
+}
+
 html {
   margin: 0;
   padding: 0;
@@ -9,16 +13,15 @@ html {
 
 .nav-link {
   position: relative;
-  color: black;
   text-decoration: none;
-  font-size: 16px;
+  font-size: 14px;
 }
 
 .nav-link::after {
   content: '';
   width: 0;
   height: 2px;
-  background: #00A651;
+  background: red;
   position: absolute;
   left: 0;
   bottom: -6px;
