--- a/src/index.css
+++ b/src/index.css
@@ -49,3 +49,54 @@ html {
   transition: width 0s linear;
   width: 0%;
 }
+
+
+.embla__button {
+  -webkit-appearance: none;
+  appearance: none;
+  background-color: #262626;
+  touch-action: manipulation;
+  display: inline-flex;
+  text-decoration: none;
+  cursor: pointer;
+  border: 0;
+  margin: 0;
+  width: 3rem;
+  height: 3rem;
+  padding: 0.75rem;
+  z-index: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.embla__dot {
+  -webkit-appearance: none;
+  appearance: none;
+  background-color: transparent;
+  touch-action: manipulation;
+  display: inline-flex;
+  text-decoration: none;
+  cursor: pointer;
+  border: 0;
+  padding: 0;
+  margin: 0;
+  background: #404040;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.embla__dot:after {
+  width: 0.75rem;
+  height: 0.75rem;
+  background: #404040;
+  display: flex;
+  align-items: center;
+  content: "";
+}
+.embla__dot--selected:after {
+  width: 1rem;
+  height: 1rem;
+  background: #fafafa;
+}
+
